--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
 
-<link rel="stylesheet" href="https://amapetitecagette.fr/css/vendor.min.160e85abd936533858a9bcb85faca0d7f523b1759219d619ce9744e4696cee2e97fb73c7824b0a9f2e8dd3a67e90c434042d641f6c778189e3263f2472ed6a6c.css" integrity="sha512-Fg6Fq9k2UzhYqby4X6yg1/UjsXWSGdYZzpdE5Gls7i6X&#43;3PHgksKny6N06Z&#43;kMQ0BC1kH2x3gYnjJj8kcu1qbA==">
+<link rel="stylesheet" href="https://amapetitecagette.fr/css/vendor.min.29d1701d1eb6d675c02757f00c3d237bdc0418a090dfc443ec70095ae6ed95b8b1bb5f9788dbc7ee438c94299e0ce2607e5e20473f04e8554bb011c6c3c8b123.css" integrity="sha512-KdFwHR621nXAJ1fwDD0je9wEGKCQ38RD7HAJWubtlbixu1&#43;XiNvH7kOMlCmeDOJgfl4gRz8E6FVLsBHGw8ixIw==">
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -302,7 +302,7 @@ Pour cela l’adhérent procède au préfinancement de son panier et accepte que
     </div>
     <div class="footer-copyright">
         <div class="container">
-            &copy; 2023 Sebastian Pech.
+            &copy; 2024 Sebastian Pech.
              <a class="orange-text text-lighten-3" href="https://www.spech.de" target="_blank" rel="noopener noreferrer">Sebastian Pech</a>.
              <a class="orange-text text-lighten-3" href="http://materializecss.com" target="_blank" rel="noopener noreferrer">Materialize</a>.
         </div>
