--- a/producteurs/index.html
+++ b/producteurs/index.html
@@ -335,7 +335,7 @@ Sylvie et Christophe LHOSTE (Longny au Perche, 61)&rdquo;</h6>
                          <li>   
                     <div> <a href="https://drive.google.com/file/d/1l_BevUo2h0yeISeh2Q-FQvuZzLrEosZV/view?usp=sharing" target="_blank">Certificat bio N° 1</a></div>
                         </li>
-                        <li><div> <a href="" target="_blank">Modalités</a></div></li>
+                        <li><div> <a href="https://drive.google.com/file/d/1Wel6DcbOz1gGOt7Mcd1QBbQ5JJiHjBD-/view?usp=sharing" target="_blank">Modalités</a></div></li>
                         
                     </ul>
                     <h6 >Référent.e : </h6>
